<resources>
    <string name="app_name">Messages</string>
    <string name="inbox">Inbox</string>
    <string name="notice">Notice</string>
    <string name="ticket">Ticket</string>
    <string name="PIN">PIN</string>
    <string name="new_conversation">New Conversation</string>
    <string name="settings">Settings</string>
    <string name="new_message">New Messages</string>
    <string name="cancel">Cancel</string>
    <string name="contacts">Contacts</string>
    <string name="to">To: </string>
    <string name="add">Add</string>
    <string name="type_content">Type content of messages</string>
    <string name="send">Send</string>
    <string name="session">Session</string>
</resources>
