<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_inbox"
        android:icon="@drawable/ic_inbox_24dp"
        android:title="@string/inbox" />
    <item
        android:id="@+id/item_notice"
        android:icon="@drawable/ic_notifications_24dp"
        android:title="@string/notice" />
    <item
        android:id="@+id/item_empty_for_fab"
        android:checkable="false"
        android:enabled="false"
        android:title="@string/empty" />
    <item
        android:id="@+id/item_ticket"
        android:icon="@drawable/ic_local_activity_24dp"
        android:title="@string/ticket" />
    <item
        android:id="@+id/item_verification_code"
        android:icon="@drawable/ic_fiber_pin_24dp"
        android:title="@string/PIN" />
</menu>
