<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.dry.messages.NewMessageTitle
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/to"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txt_phone_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:inputType="phone" />

        <ImageButton
            android:id="@+id/add_contacts_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:src="@drawable/ic_add_contacts_24dp"
            android:text="@string/add"
            android:textAllCaps="false" />

    </LinearLayout>


    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/WhiteSmoke"
        android:gravity="bottom"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/add_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/WhiteSmoke"
            android:gravity="center"
            android:src="@drawable/ic_add_24dp" />

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="4.5"
            app:cardCornerRadius="6dp"
            app:cardElevation="0dp">

            <EditText
                android:id="@+id/txt_message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/type_content"
                android:textCursorDrawable="@drawable/cursor_color"
                android:theme="@style/MyEditText" />

        </androidx.cardview.widget.CardView>

        <ImageButton
            android:id="@+id/send_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/WhiteSmoke"
            android:gravity="center"
            android:src="@drawable/ic_send_24dp"
            android:textAllCaps="false"
            android:textColor="#708090" />

    </LinearLayout>


</LinearLayout>
